apps/litomi/public-edge/gtm-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gtm-server
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn-version: latest
