apps/litomi/public-edge/gtm-server/deployment-preview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtm-server-preview
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: gtm-server-preview
  template:
    metadata:
      labels:
        app: gtm-server-preview
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: gtm-server-preview
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: gtm-server-preview
      containers:
        - name: preview
          image: gcr.io/cloud-tagging-10302018/gtm-cloud-image:stable
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            httpGet:
              path: /healthy
              port: http
            timeoutSeconds: 3
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthy
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthy
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
