apps/litomi/public-edge/gtm-server/networkpolicy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gtm-server-ingress
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - gtm-server-preview
          - gtm-server-tagging
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: 8080
